--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,56 +34,82 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:background="@color/skin"
-            android:tag="@color/skin"/>
+            android:tag="@color/skin"
+            android:onClick="paintClicked"
+            tools:ignore="UsingOnClickInXml" />
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:background="@color/black"
-            android:tag="@color/black"/>
+            android:tag="@color/black"
+            android:onClick="paintClicked"
+            tools:ignore="UsingOnClickInXml"/>
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:background="@color/red"
-            android:tag="@color/red"/>
+            android:tag="@color/red"
+            android:onClick="paintClicked"
+            tools:ignore="UsingOnClickInXml"/>
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:background="@color/green"
-            android:tag="@color/green"/>
+            android:tag="@color/green"
+            android:onClick="paintClicked"
+            tools:ignore="UsingOnClickInXml"/>
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:background="@color/blue"
-            android:tag="@color/blue"/>
+            android:tag="@color/blue"
+            android:onClick="paintClicked"
+            tools:ignore="UsingOnClickInXml"/>
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:background="@color/yellow"
-            android:tag="@color/yellow"/>
+            android:tag="@color/yellow"
+            android:onClick="paintClicked"
+            tools:ignore="UsingOnClickInXml"/>
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:background="@color/lollipop"
-            android:tag="@color/lollipop"/>
+            android:tag="@color/lollipop"
+            android:onClick="paintClicked"
+            tools:ignore="UsingOnClickInXml"/>
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:background="@color/random"
-            android:tag="@color/random"/>
+            android:tag="@color/random"
+            android:onClick="paintClicked"
+            tools:ignore="UsingOnClickInXml"/>
+
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
+            android:src="@drawable/pallet_normal"
+            android:background="@color/white"
+            android:tag="@color/white"
+            android:onClick="paintClicked"
+            tools:ignore="UsingOnClickInXml"/>
 
     </LinearLayout>
 
