--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,29 +14,24 @@
         android:layout_margin="5dp"
         android:background="@drawable/background_drawing_view_layout"
         app:layout_constraintBottom_toTopOf="@id/llBrushColor"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/ivBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/image"
-            android:scaleType="centerCrop"
             android:contentDescription="@string/imageDescription"
-            />
+            android:scaleType="centerCrop" />
 
 
         <com.malicankaya.drawingapp.DrawingView
             android:id="@+id/drawingView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#80000000"
-            />
+            android:background="#80FFFFFF" />
     </FrameLayout>
-
-
 
 
     <LinearLayout
@@ -44,102 +39,109 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/flDrawingViewContainer"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/llActionButtons"
-        >
-        <ImageButton
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_margin="2dp"
-            android:src="@drawable/pallet_normal"
-            android:background="@color/skin"
-            android:tag="@color/skin"
-            android:onClick="paintClicked"
-            tools:ignore="UsingOnClickInXml"
-            android:contentDescription="@string/imageDescription"/>
-        <ImageButton
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_margin="2dp"
-            android:src="@drawable/pallet_normal"
-            android:background="@color/black"
-            android:tag="@color/black"
-            android:onClick="paintClicked"
-            tools:ignore="UsingOnClickInXml"
-            android:contentDescription="@string/imageDescription"/>
-        <ImageButton
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_margin="2dp"
-            android:src="@drawable/pallet_normal"
-            android:background="@color/red"
-            android:tag="@color/red"
-            android:onClick="paintClicked"
-            tools:ignore="UsingOnClickInXml"
-            android:contentDescription="@string/imageDescription"/>
-        <ImageButton
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_margin="2dp"
-            android:src="@drawable/pallet_normal"
-            android:background="@color/green"
-            android:tag="@color/green"
-            android:onClick="paintClicked"
-            tools:ignore="UsingOnClickInXml"
-            android:contentDescription="@string/imageDescription"/>
-        <ImageButton
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_margin="2dp"
-            android:src="@drawable/pallet_normal"
-            android:background="@color/blue"
-            android:tag="@color/blue"
-            android:onClick="paintClicked"
-            tools:ignore="UsingOnClickInXml"
-            android:contentDescription="@string/imageDescription"/>
-        <ImageButton
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_margin="2dp"
-            android:src="@drawable/pallet_normal"
-            android:background="@color/yellow"
-            android:tag="@color/yellow"
-            android:onClick="paintClicked"
-            tools:ignore="UsingOnClickInXml"
-            android:contentDescription="@string/imageDescription"/>
-        <ImageButton
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_margin="2dp"
-            android:src="@drawable/pallet_normal"
-            android:background="@color/lollipop"
-            android:tag="@color/lollipop"
-            android:onClick="paintClicked"
-            tools:ignore="UsingOnClickInXml"
-            android:contentDescription="@string/imageDescription"/>
-        <ImageButton
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_margin="2dp"
-            android:src="@drawable/pallet_normal"
-            android:background="@color/random"
-            android:tag="@color/random"
-            android:onClick="paintClicked"
-            tools:ignore="UsingOnClickInXml"
-            android:contentDescription="@string/imageDescription"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/flDrawingViewContainer">
 
         <ImageButton
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="2dp"
-            android:src="@drawable/pallet_normal"
-            android:background="@color/white"
-            android:tag="@color/white"
+            android:background="@color/skin"
+            android:contentDescription="@string/imageDescription"
             android:onClick="paintClicked"
-            tools:ignore="UsingOnClickInXml"
-            android:contentDescription="@string/imageDescription"/>
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/skin"
+            tools:ignore="UsingOnClickInXml" />
+
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
+            android:background="@color/black"
+            android:contentDescription="@string/imageDescription"
+            android:onClick="paintClicked"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/black"
+            tools:ignore="UsingOnClickInXml" />
+
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
+            android:background="@color/red"
+            android:contentDescription="@string/imageDescription"
+            android:onClick="paintClicked"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/red"
+            tools:ignore="UsingOnClickInXml" />
+
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
+            android:background="@color/green"
+            android:contentDescription="@string/imageDescription"
+            android:onClick="paintClicked"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/green"
+            tools:ignore="UsingOnClickInXml" />
+
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
+            android:background="@color/blue"
+            android:contentDescription="@string/imageDescription"
+            android:onClick="paintClicked"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/blue"
+            tools:ignore="UsingOnClickInXml" />
+
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
+            android:background="@color/yellow"
+            android:contentDescription="@string/imageDescription"
+            android:onClick="paintClicked"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/yellow"
+            tools:ignore="UsingOnClickInXml" />
+
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
+            android:background="@color/lollipop"
+            android:contentDescription="@string/imageDescription"
+            android:onClick="paintClicked"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/lollipop"
+            tools:ignore="UsingOnClickInXml" />
+
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
+            android:background="@color/random"
+            android:contentDescription="@string/imageDescription"
+            android:onClick="paintClicked"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/random"
+            tools:ignore="UsingOnClickInXml" />
+
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
+            android:background="@color/white"
+            android:contentDescription="@string/imageDescription"
+            android:onClick="paintClicked"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/white"
+            tools:ignore="UsingOnClickInXml" />
 
     </LinearLayout>
 
@@ -147,52 +149,63 @@
         android:id="@+id/llActionButtons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/imageDescription"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/llBrushColor"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:contentDescription="@string/imageDescription"
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/llBrushColor">
+
         <ImageButton
             android:id="@+id/ibGallery"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:padding="10dp"
-            android:src="@drawable/ic_gallery"
-            android:scaleType="fitXY"
             android:backgroundTint="@color/white"
             android:contentDescription="@string/imageDescription"
-            />
+            android:padding="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_gallery" />
+
         <ImageButton
             android:id="@+id/ivUndo"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:padding="10dp"
-            android:src="@drawable/ic_undo"
-            android:scaleType="fitXY"
             android:backgroundTint="@color/white"
-            android:contentDescription="@string/imageDescription"/>
+            android:contentDescription="@string/imageDescription"
+            android:padding="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_undo" />
+
         <ImageButton
             android:id="@+id/ivRedo"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:padding="10dp"
-            android:src="@drawable/ic_redo"
-            android:scaleType="fitXY"
             android:backgroundTint="@color/white"
-            android:contentDescription="@string/imageDescription"/>
+            android:contentDescription="@string/imageDescription"
+            android:padding="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_redo" />
+
         <ImageButton
             android:id="@+id/ibBrush"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:padding="10dp"
-            android:src="@drawable/ic_brush"
-            android:scaleType="fitXY"
             android:backgroundTint="@color/white"
             android:contentDescription="@string/imageDescription"
-            />
+            android:padding="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_brush" />
+
+        <ImageButton
+            android:id="@+id/ibSave"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:backgroundTint="@color/white"
+            android:contentDescription="@string/imageDescription"
+            android:padding="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_save" />
 
     </LinearLayout>
 
